[gd_scene load_steps=10 format=3 uid="uid://csg4hk7bgpdbp"]

[ext_resource type="Texture2D" uid="uid://xf84dajf7jka" path="res://ANI/assets/player/parrot.png" id="1_n3cxq"]
[ext_resource type="Script" path="res://ANI/scenes/TtlANIAnimal/TtlANIAnimal.gd" id="1_q58mx"]
[ext_resource type="Texture2D" uid="uid://d1gd1qbge2gge" path="res://ANI/assets/items/arrow.png" id="3_lf4kx"]
[ext_resource type="AudioStream" uid="uid://caucnealb7bhe" path="res://ANI/assets/audio/stretch2.ogg" id="4_07b30"]
[ext_resource type="AudioStream" uid="uid://cvs337t6r22km" path="res://ANI/assets/audio/catapult.ogg" id="5_cogkc"]
[ext_resource type="AudioStream" uid="uid://bnsmhonq025tx" path="res://ANI/assets/audio/kick_wood.ogg" id="6_8d1t4"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_tarls"]
bounce = 0.2

[sub_resource type="CircleShape2D" id="CircleShape2D_p2le8"]
radius = 19.0

[sub_resource type="LabelSettings" id="LabelSettings_aliki"]
font_color = Color(0, 0, 0, 1)

[node name="TtlAniAnimal" type="RigidBody2D"]
input_pickable = true
physics_material_override = SubResource("PhysicsMaterial_tarls")
freeze = true
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("1_q58mx")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.15, 0.15)
texture = ExtResource("1_n3cxq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_p2le8")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
rect = Rect2(-20, -20, 40, 40)

[node name="Label" type="Label" parent="."]
visible = false
offset_left = -25.0
offset_top = -75.0
offset_right = 25.0
offset_bottom = -52.0
text = "Debug"
label_settings = SubResource("LabelSettings_aliki")

[node name="Arrow" type="Sprite2D" parent="."]
scale = Vector2(0.3, 0.3)
texture = ExtResource("3_lf4kx")
offset = Vector2(120, 0)

[node name="StretchSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_07b30")

[node name="LaunchSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_cogkc")

[node name="KickSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_8d1t4")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="sleeping_state_changed" from="." to="." method="_on_sleeping_state_changed"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_screen_exited"]
